--- a/NoStoryboards/NinjaViewController.xib
+++ b/NoStoryboards/NinjaViewController.xib
@@ -5,14 +5,14 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <customFonts key="customFonts">
-        <mutableArray key="lost_in_future_0.ttf">
-            <string>Lost-in-Future</string>
+        <mutableArray key="njnaruto.ttf">
+            <string>Ninja-Naruto</string>
         </mutableArray>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ArmyViewController" customModule="NoStoryboards" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NinjaViewController" customModule="NoStoryboards" customModuleProvider="target">
             <connections>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="view" destination="i5M-Pr-FkT" id="qwA-kV-lAe"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -31,7 +31,7 @@
                         <constraint firstAttribute="height" constant="72" id="eKY-pc-b1h"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="army" translatesAutoresizingMaskIntoConstraints="NO" id="0FU-vc-wwn">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="ninja" translatesAutoresizingMaskIntoConstraints="NO" id="0FU-vc-wwn">
                     <rect key="frame" x="219" y="362" width="149" height="128"/>
                     <animations/>
                     <constraints>
@@ -48,25 +48,37 @@
                     </constraints>
                     <state key="normal" image="next"/>
                     <connections>
-                        <action selector="loadNinjaView:" destination="-1" eventType="touchUpInside" id="Id1-o9-Ieu"/>
+                        <action selector="loadSamuraiView:" destination="-1" eventType="touchUpInside" id="fj9-0g-rkS"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Sargeant" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5gH-bt-pqn">
-                    <rect key="frame" x="63" y="128" width="474" height="46"/>
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2yh-KI-q96">
+                    <rect key="frame" x="8" y="435" width="51" height="48"/>
                     <animations/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="474" id="Jlb-8o-LIh"/>
-                        <constraint firstAttribute="height" constant="46" id="VQY-vg-D2e"/>
-                        <constraint firstAttribute="height" constant="46" id="eFe-Wn-ZDH"/>
-                        <constraint firstAttribute="width" constant="433" id="mPb-lk-cF3"/>
+                        <constraint firstAttribute="height" constant="48" id="4S8-Hs-Bvv"/>
+                        <constraint firstAttribute="width" constant="51" id="OWW-ZC-6BN"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="Lost-in-Future" family="Lost in Future" pointSize="40"/>
+                    <state key="normal" image="prev"/>
+                    <connections>
+                        <action selector="loadArmyView:" destination="-1" eventType="touchUpInside" id="bO0-j9-wkP"/>
+                    </connections>
+                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Ninja" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n2j-1d-8Q1">
+                    <rect key="frame" x="206" y="126" width="174" height="71"/>
+                    <animations/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="174" id="4zD-l6-THF"/>
+                        <constraint firstAttribute="width" constant="132" id="C0R-0s-dvw"/>
+                        <constraint firstAttribute="height" constant="71" id="GGZ-dy-NWm"/>
+                        <constraint firstAttribute="height" constant="52" id="rQn-K5-r2S"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="Ninja-Naruto" family="Ninja Naruto" pointSize="55"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                     <variation key="default">
                         <mask key="constraints">
-                            <exclude reference="VQY-vg-D2e"/>
-                            <exclude reference="mPb-lk-cF3"/>
+                            <exclude reference="C0R-0s-dvw"/>
+                            <exclude reference="rQn-K5-r2S"/>
                         </mask>
                     </variation>
                 </label>
@@ -77,17 +89,19 @@
                 <constraint firstAttribute="trailing" secondItem="grl-70-YfG" secondAttribute="trailing" id="1mH-c3-okf"/>
                 <constraint firstAttribute="trailing" secondItem="x7y-1a-pQc" secondAttribute="trailing" id="3gB-Qd-26b"/>
                 <constraint firstItem="x7y-1a-pQc" firstAttribute="top" secondItem="0FU-vc-wwn" secondAttribute="top" constant="120" id="68r-w5-wyD"/>
-                <constraint firstItem="5gH-bt-pqn" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="7HY-5x-Tgx"/>
                 <constraint firstAttribute="trailing" secondItem="fZb-Ma-yIg" secondAttribute="trailing" constant="8" id="CmN-jD-bNT"/>
-                <constraint firstItem="0FU-vc-wwn" firstAttribute="top" secondItem="5gH-bt-pqn" secondAttribute="bottom" constant="188" id="J8c-f8-DXh"/>
+                <constraint firstItem="n2j-1d-8Q1" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="HSL-yC-oc6"/>
                 <constraint firstItem="0FU-vc-wwn" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="219" id="L7k-Xz-RCc"/>
                 <constraint firstAttribute="bottom" secondItem="grl-70-YfG" secondAttribute="bottom" id="M4w-CY-G1g"/>
+                <constraint firstAttribute="bottom" secondItem="2yh-KI-q96" secondAttribute="bottom" constant="63" id="UDH-4c-mmY"/>
                 <constraint firstItem="grl-70-YfG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="V6l-ea-7dM"/>
                 <constraint firstAttribute="bottom" secondItem="fZb-Ma-yIg" secondAttribute="bottom" constant="63" id="XhN-iL-Wci"/>
                 <constraint firstItem="grl-70-YfG" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Zfe-Os-tqY"/>
+                <constraint firstItem="0FU-vc-wwn" firstAttribute="top" secondItem="n2j-1d-8Q1" secondAttribute="bottom" constant="187" id="iGM-UG-nAt"/>
                 <constraint firstAttribute="bottom" secondItem="0FU-vc-wwn" secondAttribute="bottom" constant="110" id="jpF-cG-QAi"/>
                 <constraint firstItem="0FU-vc-wwn" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="peG-mH-JBr"/>
                 <constraint firstItem="x7y-1a-pQc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="rGo-RF-y6n"/>
+                <constraint firstItem="2yh-KI-q96" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="seY-ql-0GV"/>
                 <constraint firstAttribute="trailing" secondItem="0FU-vc-wwn" secondAttribute="trailing" constant="232" id="shc-cA-CMX"/>
                 <constraint firstAttribute="bottom" secondItem="x7y-1a-pQc" secondAttribute="bottom" id="wXQ-EL-4oE"/>
             </constraints>
@@ -103,8 +117,9 @@
     </objects>
     <resources>
         <image name="BG" width="1000" height="750"/>
-        <image name="army" width="186" height="306"/>
         <image name="ground1" width="482" height="96"/>
         <image name="next" width="48" height="48"/>
+        <image name="ninja" width="885" height="806"/>
+        <image name="prev" width="48" height="48"/>
     </resources>
 </document>
