--- a/NoStoryboards/SamuraiViewController.xib
+++ b/NoStoryboards/SamuraiViewController.xib
@@ -5,12 +5,12 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <customFonts key="customFonts">
-        <mutableArray key="lost_in_future_0.ttf">
-            <string>Lost-in-Future</string>
+        <mutableArray key="samurai.ttf">
+            <string>Samurai</string>
         </mutableArray>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ArmyViewController" customModule="NoStoryboards" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SamuraiViewController" customModule="NoStoryboards" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -31,7 +31,7 @@
                         <constraint firstAttribute="height" constant="72" id="eKY-pc-b1h"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="army" translatesAutoresizingMaskIntoConstraints="NO" id="0FU-vc-wwn">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="samurai" translatesAutoresizingMaskIntoConstraints="NO" id="0FU-vc-wwn">
                     <rect key="frame" x="219" y="362" width="149" height="128"/>
                     <animations/>
                     <constraints>
@@ -39,7 +39,7 @@
                         <constraint firstAttribute="width" constant="149" id="UIN-Jd-lcb"/>
                     </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fZb-Ma-yIg">
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fZb-Ma-yIg">
                     <rect key="frame" x="541" y="431" width="51" height="52"/>
                     <animations/>
                     <constraints>
@@ -47,28 +47,29 @@
                         <constraint firstAttribute="height" constant="52" id="RDo-bK-oT1"/>
                     </constraints>
                     <state key="normal" image="next"/>
-                    <connections>
-                        <action selector="loadNinjaView:" destination="-1" eventType="touchUpInside" id="Id1-o9-Ieu"/>
-                    </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Sargeant" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5gH-bt-pqn">
-                    <rect key="frame" x="63" y="128" width="474" height="46"/>
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ys4-Ff-q47">
+                    <rect key="frame" x="8" y="435" width="47" height="48"/>
                     <animations/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="474" id="Jlb-8o-LIh"/>
-                        <constraint firstAttribute="height" constant="46" id="VQY-vg-D2e"/>
-                        <constraint firstAttribute="height" constant="46" id="eFe-Wn-ZDH"/>
-                        <constraint firstAttribute="width" constant="433" id="mPb-lk-cF3"/>
+                        <constraint firstAttribute="width" constant="47" id="Z4I-H5-pkQ"/>
+                        <constraint firstAttribute="height" constant="48" id="chB-ck-E2B"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="Lost-in-Future" family="Lost in Future" pointSize="40"/>
+                    <state key="normal" image="prev"/>
+                    <connections>
+                        <action selector="loadNinjaView:" destination="-1" eventType="touchUpInside" id="8re-7o-23G"/>
+                    </connections>
+                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Samurai" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="97A-Q1-U5h">
+                    <rect key="frame" x="161" y="113" width="265" height="75"/>
+                    <animations/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="265" id="v7H-CN-E7r"/>
+                        <constraint firstAttribute="height" constant="75" id="vdw-wQ-lJ3"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="Samurai" family="Samurai" pointSize="40"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
-                    <variation key="default">
-                        <mask key="constraints">
-                            <exclude reference="VQY-vg-D2e"/>
-                            <exclude reference="mPb-lk-cF3"/>
-                        </mask>
-                    </variation>
                 </label>
             </subviews>
             <animations/>
@@ -76,16 +77,18 @@
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="grl-70-YfG" secondAttribute="trailing" id="1mH-c3-okf"/>
                 <constraint firstAttribute="trailing" secondItem="x7y-1a-pQc" secondAttribute="trailing" id="3gB-Qd-26b"/>
+                <constraint firstItem="Ys4-Ff-q47" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="5s9-aI-yT7"/>
                 <constraint firstItem="x7y-1a-pQc" firstAttribute="top" secondItem="0FU-vc-wwn" secondAttribute="top" constant="120" id="68r-w5-wyD"/>
-                <constraint firstItem="5gH-bt-pqn" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="7HY-5x-Tgx"/>
                 <constraint firstAttribute="trailing" secondItem="fZb-Ma-yIg" secondAttribute="trailing" constant="8" id="CmN-jD-bNT"/>
-                <constraint firstItem="0FU-vc-wwn" firstAttribute="top" secondItem="5gH-bt-pqn" secondAttribute="bottom" constant="188" id="J8c-f8-DXh"/>
+                <constraint firstAttribute="bottom" secondItem="Ys4-Ff-q47" secondAttribute="bottom" constant="63" id="GWu-nv-4VT"/>
                 <constraint firstItem="0FU-vc-wwn" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="219" id="L7k-Xz-RCc"/>
                 <constraint firstAttribute="bottom" secondItem="grl-70-YfG" secondAttribute="bottom" id="M4w-CY-G1g"/>
                 <constraint firstItem="grl-70-YfG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="V6l-ea-7dM"/>
                 <constraint firstAttribute="bottom" secondItem="fZb-Ma-yIg" secondAttribute="bottom" constant="63" id="XhN-iL-Wci"/>
                 <constraint firstItem="grl-70-YfG" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Zfe-Os-tqY"/>
+                <constraint firstItem="97A-Q1-U5h" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="cSI-kA-sKr"/>
                 <constraint firstAttribute="bottom" secondItem="0FU-vc-wwn" secondAttribute="bottom" constant="110" id="jpF-cG-QAi"/>
+                <constraint firstItem="0FU-vc-wwn" firstAttribute="top" secondItem="97A-Q1-U5h" secondAttribute="bottom" constant="174" id="kGu-gE-LEU"/>
                 <constraint firstItem="0FU-vc-wwn" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="peG-mH-JBr"/>
                 <constraint firstItem="x7y-1a-pQc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="rGo-RF-y6n"/>
                 <constraint firstAttribute="trailing" secondItem="0FU-vc-wwn" secondAttribute="trailing" constant="232" id="shc-cA-CMX"/>
@@ -103,8 +106,9 @@
     </objects>
     <resources>
         <image name="BG" width="1000" height="750"/>
-        <image name="army" width="186" height="306"/>
         <image name="ground1" width="482" height="96"/>
         <image name="next" width="48" height="48"/>
+        <image name="prev" width="48" height="48"/>
+        <image name="samurai" width="184" height="230"/>
     </resources>
 </document>
